--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,6 +178,10 @@
 
     <string name="premium_support_primal_title">Support Primal</string>
 
+    <string name="legend_contribution_title">Your contribution to Primal:</string>
+    <string name="legend_support_appreciation">Thank you for your support! 💜🫂</string>
+    <string name="legend_contribute_more">Want to contribute more?</string>
+
     <string name="premium_become_legend_primal_title">Primal Legend</string>
     <string name="premium_become_legend_intro_description">The Legend tier was created to recognize users who have made a significant\ncontribution to Primal.</string>
     <string name="premium_become_legend_intro_subtitle">Donate $1000 or more to gain:</string>
