--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,6 +209,9 @@
     <string name="legend_contribution_pay_with_on_chain_bitcoin_button">Pay with on-chain bitcoin</string>
     <string name="legend_contribution_pay_with_bitcoin_lightning">Pay with bitcoin lightning</string>
     <string name="legend_contribution_amount_stage_title">Enter Amount</string>
+    <string name="legend_contribution_payment_instructions_on_chain_stage_title">On-chain Payment</string>
+    <string name="legend_contribution_payment_instructions_lightning_stage_title">Lightning Payment</string>
+    <string name="legend_contribution_success_stage_title">Success</string>
 
     <string name="premium_manage_title">Manage Premium</string>
     <string name="premium_manage_nostr_tools">Nostr Tools</string>
