Implement Get Primal Premium button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -339,7 +339,7 @@
 
     <string name="premium_ogs_leaderboard_title">Primal OGs</string>
     <string name="premium_ogs_leaderboard_latest_tab">Latest</string>
-    <string name="premium_ogs_leaderboard_about_ogs">About Primal OGs</string>
+    <string name="premium_ogs_leaderboard_get_primal_premium">Get Primal Premium</string>
     <string name="premium_ogs_leaderboard_since">Since</string>
     <string name="premium_legend_leaderboard_title">Primal Legends</string>
     <string name="premium_legend_leaderboard_latest_tab">Latest</string>
