--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,13 +337,17 @@
     <string name="premium_card_dropdown_close">Close</string>
     <string name="premium_card_dropdown_legend_settings">Legend settings</string>
 
+    <string name="premium_ogs_leaderboard_title">Premium Users</string>
+    <string name="premium_ogs_leaderboard_latest_tab">Latest</string>
+    <string name="premium_ogs_leaderboard_get_primal_premium">Get Primal Premium</string>
+    <string name="premium_ogs_leaderboard_since">Since</string>
     <string name="premium_legend_leaderboard_title">Primal Legends</string>
     <string name="premium_legend_leaderboard_latest_tab">Latest</string>
     <string name="premium_legend_leaderboard_contribution_tab">Contribution</string>
     <string name="premium_legend_leaderboard_about_legends">About Legends</string>
     <string name="premium_legend_leaderboard_since">Since</string>
     <string name="premium_legend_leaderboard_sats">sats</string>
-    <string name="premium_legend_leaderboard_no_content">Unable to load leaderboard.\nPlease try again.</string>
+    <string name="premium_leaderboard_no_content">Unable to load leaderboard.\nPlease try again.</string>
 
 
     <string name="feed_reposted_suffix">reposted</string>
