--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,6 +211,8 @@
     <string name="legend_contribution_amount_stage_title">Enter Amount</string>
     <string name="legend_contribution_payment_instructions_on_chain_stage_title">On-chain Payment</string>
     <string name="legend_contribution_payment_instructions_lightning_stage_title">Lightning Payment</string>
+    <string name="legend_contribute_payment_instructions_pay_with_primal_wallet">Pay Now via Primal Wallet</string>
+    <string name="legend_contribute_payment_instructions_copy_invoice">Copy Invoice</string>
     <string name="legend_contribution_success_stage_title">Success</string>
 
     <string name="premium_manage_title">Manage Premium</string>
