--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,7 +195,8 @@
     <string name="premium_become_legend_button_start">Become a Legend</string>
     <string name="premium_become_legend_button_pay_now">Pay Now</string>
     <string name="premium_become_legend_payment_title">On-chain Payment</string>
-    <string name="premium_become_legend_payment_instruction">Pay this on-chain invoice to complete your purchase. Your legendary status will be active immediately.</string>
+    <string name="premium_become_legend_payment_instruction_on_chain">Pay this on-chain invoice to complete your purchase. Your legendary status will be active immediately.</string>
+    <string name="premium_become_legend_payment_instruction_lightning">Pay this lightning invoice to complete your donation. Your legendary contribution will be active immediately.</string>
     <string name="premium_become_legend_button_copy_invoice">Copy Invoice</string>
     <string name="premium_become_legend_success_title">Success</string>
     <string name="premium_become_legend_success_headline">Success, payment received!</string>
@@ -211,7 +212,12 @@
     <string name="legend_contribution_amount_stage_title">Enter Amount</string>
     <string name="legend_contribution_payment_instructions_on_chain_stage_title">On-chain Payment</string>
     <string name="legend_contribution_payment_instructions_lightning_stage_title">Lightning Payment</string>
+    <string name="legend_contribution_payment_instructions_pay_with_primal_wallet">Pay Now via Primal Wallet</string>
+    <string name="legend_contribution_payment_instructions_copy_invoice">Copy Invoice</string>
     <string name="legend_contribution_success_stage_title">Success</string>
+    <string name="legend_contribution_success_stage_appreciation_title">Success, payment received!</string>
+    <string name="legend_contribution_success_stage_appreciation_subtitle">Thank you, Legend!</string>
+    <string name="legend_contribution_success_stage_appreciation_done_button">Done</string>
 
     <string name="premium_manage_title">Manage Premium</string>
     <string name="premium_manage_nostr_tools">Nostr Tools</string>
