--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -878,6 +878,7 @@
     <string name="profile_followed_by">Followed by</string>
     <string name="profile_save_user_feed_title">%1$s\'s Latest</string>
     <string name="profile_save_user_feed_description">Latest notes by %1$s\'s follows</string>
+    <string name="profile_invalid_profile_id">We couldn’t locate this profile. Please confirm the details and try again.</string>
 
     <string name="profile_follow">Follow</string>
     <string name="profile_unfollow">Unfollow</string>
