Modify LoginScreen input placeholder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Primal</string>
 
+    <string name="nsec_or_npub">nsec / npub</string>
     <string name="nsec">nsec</string>
     <string name="npub">npub</string>
 
