--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="app_invalid_nip05_address">Invalid nostr verification address.</string>
     <string name="app_error_invalid_naddr">Unable to load content. The address is invalid.</string>
     <string name="app_error_missing_private_key">Unable to perform operation due to missing private key.</string>
+    <string name="app_error_sign_unauthorized">Unable to sign event. If you are logged in with Amber check that we have permission to sign this event.</string>
     <string name="app_error_unable_to_follow_profile">Unable to follow profile. Please try again.</string>
     <string name="app_error_unable_to_unfollow_profile">Unable to unfollow profile. Please try again.</string>
     <string name="app_error_unable_to_set_nostr_address">Unable to set nostr address. Please try again.</string>
