--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -796,24 +796,20 @@
     <string name="settings_notifications_title">Notifications</string>
     <string name="settings_notifications_error_update_settings">Unable to update notification settings.</string>
     <string name="settings_notifications_error_fetch_settings">Unable to retrieve latest notification settings.</string>
-    <string name="settings_notifications_section_core">Core notifications</string>
-    <string name="settings_notifications_section_note_you_were_mentioned_in">A note you were mentioned in was</string>
-    <string name="settings_notifications_section_note_your_note_was_mentioned_in">A note your note was mentioned in was</string>
-    <string name="settings_notifications_new_user_followed_you_text">new user followed you</string>
-    <string name="settings_notifications_your_post_was_zapped_text">your post was zapped</string>
-    <string name="settings_notifications_your_post_was_liked_text">your post was liked</string>
-    <string name="settings_notifications_your_post_was_reposted_text">your post was reposted</string>
-    <string name="settings_notifications_your_post_was_replied_to_text">your post was replied to</string>
-    <string name="settings_notifications_you_were_mentioned_text">you were mentioned</string>
-    <string name="settings_notifications_your_post_was_mentioned_text">your post was mentioned</string>
-    <string name="settings_notifications_post_you_were_mentioned_in_was_zapped_text">zapped</string>
-    <string name="settings_notifications_post_you_were_mentioned_in_was_liked_text">liked</string>
-    <string name="settings_notifications_post_you_were_mentioned_in_was_reposted_text">reposted</string>
-    <string name="settings_notifications_post_you_were_mentioned_in_was_replied_to_text">replied to</string>
-    <string name="settings_notifications_post_your_post_was_mentioned_in_was_zapped_text">zapped</string>
-    <string name="settings_notifications_post_your_post_was_mentioned_in_was_liked_text">liked</string>
-    <string name="settings_notifications_post_your_post_was_mentioned_in_was_reposted_text">reposted</string>
-    <string name="settings_notifications_post_your_post_was_mentioned_in_was_replied_to_text">replied to</string>
+    <string name="settings_notifications_section_push">Enable push notifications for:</string>
+    <string name="settings_notifications_section_tab">Show in notifications tab:</string>
+    <string name="settings_notifications_section_preferences">Notification Preferences</string>
+    <string name="settings_notifications_group_new_followers">New Followers</string>
+    <string name="settings_notifications_group_zaps">Zaps</string>
+    <string name="settings_notifications_group_reactions">Reactions</string>
+    <string name="settings_notifications_group_replies">Replies</string>
+    <string name="settings_notifications_group_reposts">Reposts</string>
+    <string name="settings_notifications_group_mentions">Mentions</string>
+    <string name="settings_notifications_group_direct_messages">Direct Messages</string>
+    <string name="settings_notifications_group_wallet_txs">Wallet Transactions</string>
+    <string name="settings_notifications_group_preferences_hell_thread">Ignore notes with more than 10 user mentions</string>
+    <string name="settings_notifications_group_preferences_DMS_from_follows">Only show DM notifications from users I follow</string>
+    <string name="settings_notifications_group_preferences_reactions_from_follows">Only show reactions from users I follow</string>
 
     <string name="settings_appearance_title">Appearance</string>
     <string name="settings_appearance_theme_section_title">Theme</string>
