--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="app_removed_from_user_feeds">Removed from your home feeds</string>
     <string name="app_error_muting_user">Unable to mute user. Please try again.</string>
     <string name="app_error_unmuting_user">Unable to unmute user. Please try again.</string>
+    <string name="app_error_muting_thread">Unable to mute thread. Please try again.</string>
+    <string name="app_error_unmuting_thread">Unable to unmute thread. Please try again.</string>
     <string name="app_invalid_lud16_address">Invalid lightning (lud16) address.</string>
     <string name="app_invalid_lud16_address_user_not_found">Invalid lightning address. User \'%1$s\' doesn\'t exist on %2$s.</string>
     <string name="app_invalid_nip05_address">Invalid nostr verification address.</string>
@@ -485,6 +487,7 @@
         <item quantity="other">%1$s new notes</item>
     </plurals>
 
+    <string name="feed_context_unmute_thread">Unmute Thread</string>
     <string name="feed_context_share_note">Share note</string>
     <string name="feed_context_share_note_as_image">Share note as image</string>
     <string name="feed_context_copy_note_link">Copy note link</string>
@@ -498,6 +501,7 @@
     <string name="feed_context_copy_user_id">Copy user id</string>
     <string name="feed_context_report_user">Report user</string>
     <string name="feed_context_mute_user">Mute user</string>
+    <string name="feed_context_mute_thread">Mute Thread</string>
     <string name="feed_context_copied_toast">Copied!</string>
 
     <string name="feed_lightning_invoice_title">Lightning Invoice</string>
