Implement muted words tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -864,6 +864,7 @@
 
     <string name="settings_muted_accounts_title">Muted</string>
     <string name="settings_muted_accounts_unmute_button">Unmute</string>
+    <string name="settings_muted_accounts_mute_button">Mute</string>
     <string name="settings_muted_accounts_no_content">Your muted accounts will appear here.</string>
     <string name="settings_muted_words_no_content">Your muted words will appear here.</string>
     <string name="settings_muted_hashtags_no_content">Your muted hashtags will appear here.</string>
@@ -872,6 +873,8 @@
     <string name="settings_muted_words_tab">Words</string>
     <string name="settings_muted_hashtags_tab">Hashtags</string>
     <string name="settings_muted_threads_tab">Threads</string>
+    <string name="settings_muted_words_mute_new_word">Mute new word…</string>
+    <string name="settings_muted_hashtags_mute_new_hashtag">Mute new hashtag…</string>
 
     <string name="settings_media_uploads_title">Media Uploads</string>
     <string name="settings_media_uploads_blossom_server_section_title">Blossom Server</string>
