--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="app_error_unmuting_thread">Unable to unmute thread. Please try again.</string>
     <string name="app_error_unmuting_hashtag">Unable to unmute hashtag. Please try again.</string>
     <string name="app_error_unmuting_word">Unable to unmute word. Please try again.</string>
+    <string name="app_error_network">Unable to complete the action. Please check your connection and try again.</string>
     <string name="app_invalid_lud16_address">Invalid lightning (lud16) address.</string>
     <string name="app_invalid_lud16_address_user_not_found">Invalid lightning address. User \'%1$s\' doesn\'t exist on %2$s.</string>
     <string name="app_invalid_nip05_address">Invalid nostr verification address.</string>
@@ -36,7 +37,7 @@
     <string name="app_npub_login_error">Primal is in read only mode because you are signed in via your public key. To enable all options, please sign in with your private key.</string>
     <string name="app_error_restore_default_blossom_server">Unable to restore default blossom server. Please try again.</string>
     <string name="app_error_unable_to_update_blossom_server_list">Unable to update blossom server list. Please try again.</string>
-
+    <string name="app_error_fetching_mute_list">Failed to load your mute list. Please check your connection and try again.</string>
 
     <string name="welcome_sign_in_button_title">Sign In</string>
     <string name="welcome_create_account_button_title">Create Account</string>
