--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -493,19 +493,18 @@
     </plurals>
 
     <string name="feed_context_unmute_thread">Unmute Thread</string>
-    <string name="feed_context_share_note">Share note</string>
-    <string name="feed_context_share_note_as_image">Share note as image</string>
-    <string name="feed_context_copy_note_link">Copy note link</string>
-    <string name="feed_context_add_to_bookmark">Add to Bookmarks</string>
+    <string name="feed_context_share_note">Share Note</string>
+    <string name="feed_context_share_note_as_image">Share as Image</string>
+    <string name="feed_context_copy_note_link">Copy Note Link</string>
+    <string name="feed_context_add_to_bookmark">Add Bookmark</string>
     <string name="feed_context_bookmark_added">Note added to your bookmarks.</string>
-    <string name="feed_context_remove_from_bookmark">Remove from Bookmarks</string>
+    <string name="feed_context_remove_from_bookmark">Remove Bookmark</string>
     <string name="feed_context_bookmark_removed">Note removed from your bookmarks.</string>
-    <string name="feed_context_copy_note_text">Copy note text</string>
-    <string name="feed_context_copy_note_id">Copy note id</string>
-    <string name="feed_context_copy_raw_data">Copy raw data</string>
-    <string name="feed_context_copy_user_id">Copy user id</string>
+    <string name="feed_context_copy_note_text">Copy Note Text</string>
+    <string name="feed_context_copy_note_id">Copy Note ID</string>
+    <string name="feed_context_copy_raw_data">Copy Raw Data</string>
     <string name="feed_context_report_user">Report user</string>
-    <string name="feed_context_mute_user">Mute user</string>
+    <string name="feed_context_mute_user">Mute User</string>
     <string name="feed_context_mute_thread">Mute Thread</string>
     <string name="feed_context_copied_toast">Copied!</string>
 
@@ -964,7 +963,7 @@
     <string name="context_menu_mute_user">Mute user</string>
     <string name="context_menu_unmute_user">Unmute user</string>
     <string name="context_menu_report_user">Report user</string>
-    <string name="context_menu_report_content">Report content</string>
+    <string name="context_menu_report_content">Report Content</string>
 
     <string name="context_confirm_bookmark_title">Saving first bookmark</string>
     <string name="context_confirm_bookmark_text">You are about to save your first public bookmark. These bookmarks can be seen by other nostr users. Do you wish to continue?</string>
